# snail-server

./: .clang-format  .clang-tidy  .editorconfig  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
apps/: CMakeLists.txt  analysis.cpp  etl_file.cpp  perf_data_file.cpp  snail-profiler.manifest.xml  snail-profiler.ps1
snail/analysis/: CMakeLists.txt  analysis.cpp  analysis.hpp  call_tree.cpp  call_tree.hpp  data_provider.cpp  data_provider.hpp  diagsession_data_provider.cpp  diagsession_data_provider.hpp  etl_data_provider.cpp  etl_data_provider.hpp  etl_stack_provider.cpp  etl_stack_provider.hpp  options.cpp  options.hpp  path_map.cpp  path_map.hpp  perf_data_data_provider.cpp  perf_data_data_provider.hpp  perf_data_stack_provider.cpp  perf_data_stack_provider.hpp  stack_provider.hpp
snail/analysis/data/: call_tree.hpp  file.hpp  functions.hpp  hit_counts.hpp  ids.hpp  location.hpp  modules.hpp  pmc_counter.hpp  process.hpp  sample_source.hpp  session.hpp  stack.hpp  system.hpp  thread.hpp
snail/analysis/detail/: download.cpp  download.hpp  dwarf_resolver.cpp  dwarf_resolver.hpp  etl_file_process_context.cpp  etl_file_process_context.hpp  id_at.hpp  module_map.cpp  module_map.hpp  pdb_info.hpp  pdb_resolver.cpp  pdb_resolver.hpp  perf_data_file_process_context.cpp  perf_data_file_process_context.hpp  process_history.hpp  stack_cache.hpp
snail/common/: CMakeLists.txt  bit_flags.hpp  cast.hpp  chunked_reader.hpp  date_time.hpp  filename.cpp  filename.hpp  generator.hpp  guid.cpp  guid.hpp  hash_combine.hpp  ms_xca_compression_format.hpp  ms_xca_decompression.cpp  ms_xca_decompression.hpp  path.cpp  path.hpp  progress.cpp  progress.hpp  stream_position.hpp  string_compare.cpp  string_compare.hpp  system.cpp  system.hpp  thread.cpp  thread.hpp  thread_pool.cpp  thread_pool.hpp  trim.cpp  trim.hpp  types.hpp  unicode.cpp  unicode.hpp  wildcard.cpp  wildcard.hpp
snail/common/detail/: dump.hpp
snail/common/parser/: extract.hpp  read.hpp
snail/jsonrpc/: CMakeLists.txt  errors.cpp  errors.hpp  jsonrpc_v2_protocol.cpp  jsonrpc_v2_protocol.hpp  message_handler.hpp  protocol.hpp  request.hpp  server.cpp  server.hpp
snail/jsonrpc/detail/: request.hpp
snail/jsonrpc/stream/generic/: generic_iostream.hpp  generic_iostream_impl.hpp  streambuf_base.cpp  streambuf_base.hpp
snail/jsonrpc/stream/unix/: unix_domain_socket_iostream.cpp  unix_domain_socket_iostream.hpp  unix_domain_socket_streambuf.cpp  unix_domain_socket_streambuf.hpp
snail/jsonrpc/stream/windows/: pipe_iostream.cpp  pipe_iostream.hpp  pipe_streambuf.cpp  pipe_streambuf.hpp
snail/jsonrpc/transport/: message_connection.cpp  message_connection.hpp  message_reader.hpp  message_writer.hpp  stream_message_reader.cpp  stream_message_reader.hpp  stream_message_writer.cpp  stream_message_writer.hpp
snail/perf_data/: CMakeLists.txt  build_id.cpp  build_id.hpp  dispatching_event_observer.cpp  dispatching_event_observer.hpp  metadata.cpp  metadata.hpp  perf_data_file.cpp  perf_data_file.hpp
snail/perf_data/detail/: attributes_database.cpp  attributes_database.hpp  file_header.hpp  metadata.cpp  metadata.hpp
snail/perf_data/parser/: event.hpp  event_attributes.hpp  header.hpp  header_feature.hpp
snail/perf_data/parser/records/: kernel.cpp  kernel.hpp  perf.hpp
snail/server/: CMakeLists.txt  main.cpp  snail_server.cpp  snail_server.hpp
snail/server/detail/: document_id.hpp  document_task_scheduler.cpp  document_task_scheduler.hpp  storage.cpp  storage.hpp
snail/server/requests/: protocol.hpp  requests.cpp  requests.hpp
snail/server/storage/: storage.cpp  storage.hpp
src/etl/: CMakeLists.txt  dispatching_event_observer.cpp  dispatching_event_observer.hpp  etlfile.cpp  etlfile.hpp  etlreader.cpp  etlreader.hpp  guid.hpp
src/etl/detail/: dump.hpp
src/etl/parser/: buffer.cpp  buffer.hpp  extract.hpp  generic.hpp  trace.cpp  trace.hpp  utility.cpp  utility.hpp
src/etl/parser/records/: identifier.hpp
src/etl/parser/records/kernel/: header.cpp  header.hpp  image.cpp  image.hpp  perfinfo.cpp  perfinfo.hpp  process.hpp  (+2 more)
src/etl/parser/trace_headers/: common.hpp  compact_trace.cpp  compact_trace.hpp  event_header_trace.cpp  event_header_trace.hpp  full_header_trace.cpp  full_header_trace.hpp  fwd.hpp  instance_trace.cpp  instance_trace.hpp  perfinfo_trace.cpp  perfinfo_trace.hpp  system_trace.cpp  system_trace.hpp
tests/: CMakeLists.txt  analysis.cpp  binarystream.cpp  etl_file.cpp  etlfile.cpp  etlreader.cpp  main.cpp  perf_data_file.cpp
tests/analysis/: module_map.cpp
tests/apps/: .gitattributes  .gitignore  CMakeLists.txt  README.md  record-win-xperf.ps1  record-win.ps1
tests/apps/inner/: CMakeLists.txt  README.md  main.cpp
tests/apps/ordered/: CMakeLists.txt  README.md  impl.cpp  main.cpp
tests/common/: CMakeLists.txt  folders.hpp  utility.cpp
tests/data/: .gitignore
tests/etl/: event_observer.cpp  parser.cpp
tests/integration/: CMakeLists.txt  analysis.cpp  etl.cpp  perf_data.cpp
tests/jsonrpc/: pipe.cpp  unix_domain_socket.cpp
tests/perf_data/: event_observer.cpp  parser.cpp
tests/system/: CMakeLists.txt
tests/system/client/: package-lock.json  package.json
tests/system/client/src/: protocol.ts
tests/system/client/tests/: diagsession.test.ts  perf_data.test.ts  server.ts
tests/unit/: CMakeLists.txt  folders.cpp  main.cpp
tests/unit/analysis/: dwarf_resolver.cpp  etl_file_process_context.cpp  helpers.hpp  module_map.cpp  options.cpp  path_map.cpp  pdb_resolver.cpp  perf_data_file_process_context.cpp  process_history.cpp  stack_cache.cpp  stacks_analysis.cpp
tests/unit/common/: chunked_reader.cpp  compression.cpp  parser.cpp  progress.cpp  thread_pool.cpp  utility.cpp
tests/unit/etl/: event_observer.cpp  parser.cpp
tests/unit/jsonrpc/: message.cpp  pipe.cpp  protocol.cpp  request.cpp  server.cpp  unix_domain_socket.cpp
tests/unit/perf_data/: attributes_database.cpp  event_observer.cpp  parser.cpp  utility.cpp
tools/: CMakeLists.txt  analysis.cpp  etl_file.cpp  perf_data_file.cpp  snail-profiler.ps1
tools/common/: progress_printer.cpp  progress_printer.hpp
(+63 files in other folders)
